apps/longhorn-ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.pedrocoutinho.eu`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: traefik
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: homelab-wildcard-tls
